--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,6 +1,3 @@
-.btn-circle-border{  
-  padding: 6px 0px;
-  border-radius: 15px;
-  font-size: 8px;
-  text-align: center;
+.card{
+  border:none !important;
 }
