--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,61 @@
-.card{
-  border:none !important;
+:root{
+  --color-text:#030303;
+}
+
+.ycNavigationContainer{
+  padding-left: 16px;
+  padding-right: 16px;
+  height:56px
+}
+
+.ycSearchItems{  
+  height: 40px !important;
+}
+
+.ycLogoContainer{
+  padding-left: 16px;
+  padding-right: 14px;
+  padding-top: 18px;
+  padding-bottom: 18px;
+  flex:none;
+}
+
+.ycLogoPartCountry{
+  margin-left:12px;
+  margin-right: 10px;
+  margin-top: 0px;
+  margin-bottom: 0px;
+  
+  color:var(--color-text);
+  font-size: 10px;  
+}
+#ycLogoLink{
+  text-decoration: none !important;
+}
+
+.leftSidebarButtonLink{
+  font-size: 9px !important;
+  text-decoration: none !important;  
+  width: 50px;
+}
+
+.ycCard{
+  border:none !important;  
+  margin: 5px;
+}
+
+.ycCardVideoContent{
+  width: 360px;
+  height: 120px;
+  display: block;
+}
+
+.ycCardVideo{
+  width:100%;
+  height:100%;  
+}
+
+
+.ycIconSearch{
+  font-size: 12px;
 }
