--- a/styles/globals.css
+++ b/styles/globals.css
@@ -290,7 +290,7 @@ main{
     width:275px;
   }
 }
-@media only screen and (max-width:768px){
+@media (max-width:768px){
   .ycCard{    
     width:320px /*  × 167 */
   }
