--- a/styles/globals.css
+++ b/styles/globals.css
@@ -280,6 +280,12 @@ main{
 
 
 /*********************************************/
+@media only screen and (min-width:1201px){
+  .ycCard{    
+    width:344px;
+  }
+}
+
 @media only screen and (max-width:1200px){
   .ycCard{    
     width:344px;
